--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <section class="blog-main-two">
         <div class="sub-one">
             <h5>Daily Digest</h5>
-            <a href="index2.html"> <button class="button-two">View all</button></a>
+            <a href="Daily Digest.html"> <button class="button-two">View all</button></a>
         </div>
         <div class="sub-main">
             <div class="sub-two">
@@ -87,7 +87,7 @@
     <section class="blog-main-three">
         <div class="sub-one">
             <h5>Design Tools</h5>
-            <a href="index3.html"> <button class="button-two">View all</button></a>
+            <a href="Design Tools.html"> <button class="button-two">View all</button></a>
         </div>
         <div class="sub-main">
             <div class="sub-two">
@@ -132,7 +132,7 @@
     <section class="blog-main-four">
         <div class="sub-one">
             <h5>Tutorials</h5>
-            <a href="index4.html"><button class="button-two">View all</button></a>
+            <a href="Tutorial.html"><button class="button-two">View all</button></a>
         </div>
         <div class="sub-main">
             <div class="sub-two">
