--- a/Daily Digest.html
+++ b/Daily Digest.html
@@ -39,7 +39,7 @@
     </section>
     <section class="blog-main-two">
         <div class="sub-main">
-            <a href="index5.html" style="text-decoration: none;">
+            <a href="Article.html" style="text-decoration: none;">
                 <div class="sub-two">
                     <div class="sub-div">
                         <span>AUGUST 13,2021</span>
@@ -54,7 +54,7 @@
             </a>
         </div>
         <div class="sub-main">
-            <a href="index6.html" style="text-decoration: none;">
+            <a href="Art.html" style="text-decoration: none;">
                 <div class="sub-two">
                     <div class="sub-div">
                         <span>AUGUST 13,2021</span>
@@ -69,7 +69,7 @@
             </a>
         </div>
         <div class="sub-main">
-            <a href="index7.html" style="text-decoration: none;">
+            <a href="Category.html" style="text-decoration: none;">
                 <div class="sub-two">
                     <div class="sub-div">
                         <span>AUGUST 13,2021</span>
