--- a/Category.html
+++ b/Category.html
@@ -8,8 +8,8 @@
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link  href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap"
-    rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap"
+        rel="stylesheet">
     <title>Minimal-Blog-Template</title>
 </head>
 
@@ -25,9 +25,15 @@
             <input type="checkbox" id="mobileIcon" class="mobileIcon">
             <nav class="navbar">
                 <ul>
-                    <li>Daily Digest</li>
-                    <li>Design Tools</li>
-                    <li>Tutorials</li>
+                    <a href="Daily Digest.html" style="text-decoration: none;">
+                        <li>Daily Digest</li>
+                    </a>
+                    <a href="Design Tools.html" style="text-decoration: none;">
+                        <li>Design Tools</li>
+                    </a>
+                    <a href="Tutorial.html" style="text-decoration: none;">
+                        <li>Tutorials</li>
+                    </a>
                 </ul>
                 <button class="button-one">Subscribe</button>
             </nav>
