--- a/Daily Digest.html
+++ b/Daily Digest.html
@@ -8,14 +8,14 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap"
-    rel="stylesheet">
+        rel="stylesheet">
     <title>Minimal-Blog-Template</title>
 </head>
 
 <body>
     <section class="blog-header">
         <header class="header">
-            <img src="IMAGES/personally-logo.svg" alt="">
+            <a href="index.html" style="text-decoration: none;"><img src="IMAGES/personally-logo.svg" alt=""></a>
             <label for="mobileIcon" class="mobile">
                 <div class="mobile-icon">
                     <img src="IMAGES/Union.svg" alt="">
@@ -25,8 +25,12 @@
             <nav class="navbar">
                 <ul>
                     <li class="school">Daily Digest</li>
-                    <li>Design Tools</li>
-                    <li>Tutorials</li>
+                    <a href="Design Tools.html" style="text-decoration: none;">
+                        <li>Design Tools</li>
+                    </a>
+                    <a href="Tutorial.html" style="text-decoration: none;">
+                        <li>Tutorials</li>
+                    </a>
                 </ul>
                 <button class="button-one">Subscribe</button>
             </nav>
