--- a/Design Tools.html
+++ b/Design Tools.html
@@ -16,7 +16,7 @@
 <body>
     <section class="blog-header">
         <header class="header">
-            <img src="IMAGES/personally-logo.svg" alt="">
+            <a href="index.html" style="text-decoration: none;"><img src="IMAGES/personally-logo.svg" alt=""></a>
             <label for="mobileIcon" class="mobile">
                 <div class="mobile-icon">
                     <img src="IMAGES/Union.svg" alt="">
@@ -25,9 +25,13 @@
             <input type="checkbox" id="mobileIcon" class="mobileIcon">
             <nav class="navbar">
                 <ul>
-                    <li>Daily Digest</li>
+                    <a href="Daily Digest.html" style="text-decoration: none;">
+                        <li>Daily Digest</li>
+                    </a>
                     <li class="school">Design Tools</li>
-                    <li>Tutorials</li>
+                    <a href="Tutorial.html" style="text-decoration: none;">
+                        <li>Tutorials</li>
+                    </a>
                 </ul>
                 <button class="button-one">Subscribe</button>
             </nav>
